[gd_scene load_steps=8 format=3 uid="uid://dxe52q6vw4br8"]

[ext_resource type="Script" path="res://scripts/home_scene.gd" id="1_4mw74"]
[ext_resource type="FontFile" uid="uid://kgxrbny6rgu8" path="res://assets/fonts/GlitchGoblin_Font_1_1/GlitchGoblin.ttf" id="2_faq7t"]
[ext_resource type="PackedScene" uid="uid://clsjlrtnife1o" path="res://scenes/rect_button.tscn" id="3_tx5re"]
[ext_resource type="PackedScene" uid="uid://bheakgcv4xagd" path="res://scenes/square_button.tscn" id="4_l0k85"]
[ext_resource type="AudioStream" uid="uid://d4gwymxgpelk5" path="res://assets/audio/effects/vs-button-click-03.mp3" id="5_bkcsa"]
[ext_resource type="AudioStream" uid="uid://d4ltcl37hf221" path="res://assets/audio/background/home_screen_sound.mp3" id="6_4s6pm"]

[sub_resource type="GDScript" id="GDScript_rv6uy"]
script/source = "extends AudioStreamPlayer2D


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass
"

[node name="Background" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.196, 0.18, 0.184, 1)
metadata/_edit_vertical_guides_ = [110.0, 1170.0]
metadata/_edit_horizontal_guides_ = [650.0]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -510.0
offset_top = -361.0
offset_right = 550.0
offset_bottom = 310.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.6, 1.6)
pivot_offset = Vector2(530, 291)
theme_override_constants/separation = 50
alignment = 1
script = ExtResource("1_4mw74")

[node name="Top" type="VBoxContainer" parent="VBoxContainer"]
layout_direction = 2
layout_mode = 2
theme_override_constants/separation = 50

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Top"]
layout_mode = 2
theme_override_constants/margin_top = 30

[node name="Title" type="RichTextLabel" parent="VBoxContainer/Top/MarginContainer"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("2_faq7t")
theme_override_font_sizes/normal_font_size = 170
bbcode_enabled = true
text = "[center]Grid City"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="CenterContainer" type="VBoxContainer" parent="VBoxContainer/Top"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 10
alignment = 1

[node name="PlayButton" parent="VBoxContainer/Top/CenterContainer" instance=ExtResource("3_tx5re")]
layout_mode = 2

[node name="Exit" parent="VBoxContainer/Top/CenterContainer" instance=ExtResource("3_tx5re")]
layout_mode = 2
text = "Exit"

[node name="Bottom" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 900
alignment = 1

[node name="VolumeButton" parent="VBoxContainer/Bottom" instance=ExtResource("4_l0k85")]
layout_mode = 2
texture_file = "res://assets/GUI/Button/Icon/SoundOn.png"

[node name="LevelSelectorButton" parent="VBoxContainer/Bottom" instance=ExtResource("4_l0k85")]
layout_mode = 2
texture_file = "res://assets/GUI/Button/Icon/Levels.png"

[node name="ButtonClickSound" type="AudioStreamPlayer2D" parent="VBoxContainer"]
position = Vector2(-82.5, -2.74988)
scale = Vector2(0.625, 0.625)
stream = ExtResource("5_bkcsa")
script = SubResource("GDScript_rv6uy")

[node name="HomeSound" type="AudioStreamPlayer2D" parent="VBoxContainer"]
stream = ExtResource("6_4s6pm")

[connection signal="clicked" from="VBoxContainer/Top/CenterContainer/Exit" to="VBoxContainer" method="_on_exit_clicked"]
